<resources>
    <string name="app_name">Quester</string>
    <string name="quester">Quester</string>
    <string name="Create">Создать</string>
    <string name="Do">Пройти</string>
    <string name="Auth">Авторизация</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="GetIn">Войти</string>
    <string name="RegIn">Зарегистрироватся</string>
    <string name="CreateTest">Создать тест</string>
    <string name="TestName">Название теста</string>
    <string name="OpisanieTesta">Краткое описание теста</string>
    <string name="Full_opisania_testa">Полное описание теста</string>
    <string name="QuestAuthor">Автор квеста</string>
    <string name="QuestText">Текст квеста</string>
    <string name="TextOfQuestion">Текст вопроса</string>
    <string name="user">Учетная запись</string>
    <string name="TextPr">Подтвердите создание теста</string>
    <string name="Acceprt">Подтверждаю</string>
</resources>