<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateTest"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/NameTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/TestName"/>
    <EditText
        android:id="@+id/AuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/QuestAuthor"
        android:inputType="textLongMessage"/>
    <EditText
        android:id="@+id/OpisaniaTesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/OpisanieTesta"
        android:inputType="textShortMessage"/>
    <EditText
        android:id="@+id/FullOpisania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Full_opisania_testa"
        android:inputType="textLongMessage"/>
    <EditText
        android:id="@+id/QuestText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/QuestText"
        android:inputType="textLongMessage"/>
</LinearLayout>