<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quester"/>

    <Button
        android:id="@+id/Button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button_do"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Do"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="20sp"/>


</LinearLayout>